--- a/aidsec_dashboard/requirements.txt
+++ b/aidsec_dashboard/requirements.txt
@@ -1,5 +1,4 @@
-# AidSec Lead Dashboard Dependencies
-streamlit>=1.33.0
+# AidSec Lead Dashboard Backend Dependencies
 sqlalchemy>=2.0.0
 pandas>=2.0.0
 openpyxl>=3.1.0
@@ -8,7 +7,6 @@ python-dotenv>=1.0.0
 openai>=1.3.0
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
-plotly>=5.18.0
 
 # FastAPI Backend
 fastapi>=0.115.0
