Prepare Vercel production deployment and agent access setup

--- a/aidsec_dashboard/.env.example
+++ b/aidsec_dashboard/.env.example
@@ -1,6 +1,31 @@
 # AidSec Dashboard Environment Variables
 # Copy this file to .env and fill in your values
 
+# --------------------------------------------------
+# Core App / Security
+# --------------------------------------------------
+APP_PASSWORD=change-me
+API_KEY=change-me-global-api-key
+
+# Optional: per-agent keys for OpenClaw queue auth
+# Format: agentId=secret,agentId=secret
+AGENT_API_KEYS=agent1=change-me-agent1,agent2=change-me-agent2
+
+# --------------------------------------------------
+# API / CORS
+# --------------------------------------------------
+# Add your production frontend URL(s), comma-separated
+# Example: https://aidsec-dashboard.vercel.app,https://www.yourdomain.com
+CORS_ORIGINS=http://localhost:3000,http://localhost:8501
+
+# --------------------------------------------------
+# Database
+# --------------------------------------------------
+# Local fallback (SQLite) is used when DATABASE_URL is empty.
+# For cloud deploy use PostgreSQL URL, e.g.
+# DATABASE_URL=postgresql+psycopg://user:pass@host:5432/dbname
+DATABASE_URL=
+
 # SMTP Settings (for sending emails)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
