--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -7,8 +7,10 @@ nixPkgs = ["python312", "gcc"]
 
 [phases.install]
 cmds = [
-  "cd aidsec_dashboard && pip install -r requirements.txt"
+  "cd aidsec_dashboard && (python3 -m ensurepip --upgrade || python -m ensurepip --upgrade)",
+  "cd aidsec_dashboard && (python3 -m pip install --upgrade pip || python -m pip install --upgrade pip)",
+  "cd aidsec_dashboard && (python3 -m pip install -r requirements.txt || python -m pip install -r requirements.txt)"
 ]
 
 [start]
-cmd = "cd aidsec_dashboard && python -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+cmd = "cd aidsec_dashboard && (python3 -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000} || python -m uvicorn api.main:app --host 0.0.0.0 --port ${PORT:-8000})"
