--- a/aidsec_dashboard/requirements.txt
+++ b/aidsec_dashboard/requirements.txt
@@ -12,5 +12,6 @@ lxml>=4.9.0
 fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
 pydantic>=2.0.0
+python-multipart>=0.0.9
 slowapi>=0.1.9
 psycopg[binary]>=3.2.0
