Add Telegram webhook task commands and agent hint prioritization

--- a/aidsec_dashboard/.env.example
+++ b/aidsec_dashboard/.env.example
@@ -11,6 +11,12 @@ API_KEY=change-me-global-api-key
 # Format: agentId=secret,agentId=secret
 AGENT_API_KEYS=agent1=change-me-agent1,agent2=change-me-agent2
 
+# Telegram Bot Integration (optional)
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_WEBHOOK_SECRET=
+TELEGRAM_ALLOWED_CHAT_IDS=
+TELEGRAM_ALLOWED_USER_IDS=
+
 # --------------------------------------------------
 # API / CORS
 # --------------------------------------------------
